# enigmatutorials

./: LICENSE  README.md  tex_template.tex
Control Theory/: README.md
Tutorial/: Intro to c.ai
arduino/: Binary Numbers.ai
intro2ml/: linearRegression.ipynb  readme.txt
intro2ml/intro2ai/: intro2ai.tex
intro2ml/linearRegression/: linearRegression.ipynb  linearRegression.tex
intro2ml/linearRegressionPytorch/: checkTorch.ipynb  graph1.gv  graph2.gv  linearRegressionTheDumbWay.aux  linearRegressionTheDumbWay.ipynb  linearRegressionTheDumbWay.out  linearRegressionTheDumbWay.tex
intro2ml/linearRegressionPytorch/_minted-linearRegressionTheDumbWay/: 21BC69027DEBC1111A6E75941C7C32CFC8E9526DA0816403B39CE576C1A9D75B.pygtex  417FEC9FFD1EB0F26C3880877F53BF18C8E9526DA0816403B39CE576C1A9D75B.pygtex  5A6168CAF23E35EA54BEAEEA1FE08899C8E9526DA0816403B39CE576C1A9D75B.pygtex  691A9B0B5C4FDD2AB8FD4856D246D3CFC8E9526DA0816403B39CE576C1A9D75B.pygtex  6DCA3FA715AEA26EBF37218A85730C3AC8E9526DA0816403B39CE576C1A9D75B.pygtex  73616E183BD42D0CFE51CA40B97F33F2C8E9526DA0816403B39CE576C1A9D75B.pygtex  74A3EADFFFDE7B1868532F81ADB60717C8E9526DA0816403B39CE576C1A9D75B.pygtex  (+6 more)
intro2ros/: Inertia calculator.ipynb
intro2ros/tutorial_docs/: demo.webm
intro2ros/workspaces/intro2ros/src/intro2roscpp/: CMakeLists.txt  package.xml
intro2ros/workspaces/intro2ros/src/intro2roscpp/src/: chatter_pub.cpp  chatter_sub.cpp  hello_world.cpp
intro2ros/workspaces/intro2ros/src/intro2rospy/: CMakeLists.txt
intro2ros/workspaces/intro2ros/src/intro2rospy/scripts/: hello_world.py  pose_subscriber.py
(+205 files in other folders)
